--- a/main.tex
+++ b/main.tex
@@ -13,9 +13,11 @@
 \begin{document}
 %\subfile{tex/title.tex}
 
-%\tableofcontents
+%\tableofcontentss
 
 %start lections
 \subfile{tex/chapter1.tex}
 \subfile{tex/chapter2.tex}
+\subfile{tex/chapter3.tex}
+\subfile{tex/chapter4.tex}
 \end{document}  
