--- a/tex/chapter2.tex
+++ b/tex/chapter2.tex
@@ -3,5 +3,6 @@
 \begin{document}
 \chapter{Теория систем линейных алгебраических уравнений}
 \subfile{chapter2/lec3.tex}
-
+\subfile{chapter2/lec4.tex}
+\subfile{chapter2/lec5.tex}
 \end{document}
