--- a/preamble.tex
+++ b/preamble.tex
@@ -65,7 +65,9 @@
 
 \everymath{\displaystyle}
 %for span
+\newcommand{\defect}{\operatorname{def}}
 \DeclareMathOperator{\spann}{span}
+\renewcommand{\Im}{\operatorname{Im}}
 \newcommand\spanset[1]{\ensuremath\spann(#1)}
 
 % Easily typeset systems of equations (French package)
