--- a/tex/chapter4.tex
+++ b/tex/chapter4.tex
@@ -4,4 +4,5 @@
 \chapter{Линейные операторы в линейных пространствах}
 \subfile{chapter4/lec8'.tex}
 \subfile{chapter4/lec9.tex}
+\subfile{chapter4/lec10.tex}
 \end{document}
