--- a/tex/chapter4.tex
+++ b/tex/chapter4.tex
@@ -5,4 +5,5 @@
 \subfile{chapter4/lec8'.tex}
 \subfile{chapter4/lec9.tex}
 \subfile{chapter4/lec10.tex}
+\subfile{chapter4/lec11.tex}
 \end{document}
