--- a/preamble.tex
+++ b/preamble.tex
@@ -3,7 +3,7 @@
 
 \usepackage[utf8]{inputenc}
 
-\usepackage[T1]{fontenc}
+\usepackage[T2A]{fontenc}
 \usepackage{textcomp}
 \usepackage[russian]{babel}
 \usepackage{url}
