--- a/main.tex
+++ b/main.tex
@@ -11,9 +11,9 @@
 \title{Линейная алгебра}
 
 \begin{document}
-%\subfile{tex/title.tex}
+\subfile{tex/title.tex}
 
-%\tableofcontentss
+\tableofcontents
 
 %start lections
 \subfile{tex/chapter1.tex}
@@ -21,4 +21,5 @@
 \subfile{tex/chapter3.tex}
 \subfile{tex/chapter4.tex}
 \subfile{tex/chapter5.tex}
+\subfile{tex/chapter6.tex}
 \end{document}  
