--- a/tex/chapter5.tex
+++ b/tex/chapter5.tex
@@ -3,4 +3,5 @@
 \begin{document}
 \chapter{Биленейные и квадратичные формы в вещественном ЛП} 
 \subfile{chapter5/lec11'.tex}
+\subfile{chapter5/lec12.tex}
 \end{document}
