--- a/preamble.tex
+++ b/preamble.tex
@@ -41,6 +41,16 @@
 \usepackage{cancel}
 % Bold math
 \usepackage{bm}
+\usepackage{hyperref}
+\hypersetup{
+    colorlinks=true,
+    linkcolor=blue,
+    urlcolor=cyan,
+    pdftitle={Линейная алгебра},
+    pdfauthor={Ваше имя},
+    bookmarksopen=true,
+    unicode=true
+}
 % Some shortcuts
 \newcommand\N{\ensuremath{\mathbb{N}}}
 \newcommand\R{\ensuremath{\mathbb{R}}}
