--- a/preamble.tex
+++ b/preamble.tex
@@ -61,6 +61,7 @@
 \newcommand\V{\ensuremath{\mathbb{V}}}
 \newcommand\W{\ensuremath{\mathbb{W}}}
 \renewcommand\U{\ensuremath{\mathbb{U}}}
+\newcommand\E{\ensuremath{\mathbb{E}}}
 \newcommand*\tcircle[1]{%
   \tikz[baseline=(C.base)]\node[draw,circle,inner sep=0.5pt](C) {#1};\!
 }
