--- a/main.tex
+++ b/main.tex
@@ -15,7 +15,7 @@
 
 \tableofcontents
 
-%start lections
+%Подключение глав
 \subfile{tex/chapter1.tex}
 \subfile{tex/chapter2.tex}
 \subfile{tex/chapter3.tex}
