--- a/tex/title.tex
+++ b/tex/title.tex
@@ -9,7 +9,7 @@
 \author{
     \textbf{Лектор:}\\ Иванова Т. М.
     \\ ~ \\ 
-    \textbf{Верстка}\\% Белоусов М.
+    \textbf{Верстка:}\\ Белоусов М.
 }
 
 \date{}
