--- a/tex/chapter7.tex
+++ b/tex/chapter7.tex
@@ -3,4 +3,5 @@
 \begin{document}
 \chapter{Евклидовы и унитарные пространства}
 \subfile{chapter7/lec13.tex}
+\subfile{chapter7/lec14.tex}
 \end{document}
