--- a/tex/chapter8.tex
+++ b/tex/chapter8.tex
@@ -3,4 +3,5 @@
 \begin{document}
 \chapter{Линейные операторы в $\U$\; (в $\E$)}
 \subfile{chapter8/lec14'.tex}
+\subfile{chapter8/lec15.tex}
 \end{document}
